--- a/src/main/webapp/loginBack.html
+++ b/src/main/webapp/loginBack.html
@@ -6,44 +6,50 @@
 	<link rel="stylesheet" type="text/css" href="static/back/css/H-ui.min.css" />
 	<link rel="stylesheet" type="text/css" href="static/back/css/H-ui.admin.css" />
 	<link rel="stylesheet" type="text/css" href="static/back/css/iconfont.css" />
-	<title>学生成绩管理系统--后台登录</title>
+	<link rel="stylesheet" type="text/css" href="static/back/css/style.css"/>
+	<title>学生成绩后台管理系统</title>
 </head>
 
-<body>
-	<input type="hidden" id="TenantId" name="TenantId" value="" />
-	<div class="header text-c">
-		<h1>学生成绩管理系统--后台登录</h1>
-	</div>
-	<div class="loginWraper">
-		<div id="loginform" class="loginBox">
-			<form class="form form-horizontal" action="backTeacher/login" method="post">
-				<div class="row cl">
-					<label class="form-label col-xs-3">
-						<i class="Hui-iconfont">&#xe60d;</i>
-					</label>
-					<div class="formControls col-xs-8">
-						<input id="" name="teaNum" type="text" placeholder="账户" class="input-text size-L">
+<body class="login-bg">
+<div id="login-box">
+	<div class="login-box" id="loginform">
+		<header>
+			<h1>学生成绩后台管理系统</h1>
+			<br>
+		</header>
+		<div class="loginWraper">
+			<div id="loginform" class="loginBox">
+				<form class="form form-horizontal" action="backTeacher/login" method="post">
+					<div class="row cl">
+						<label class="form-label col-xs-2" style="padding-right: 0;margin-left: 20px">
+							<i class="Hui-iconfont" style="font-size: 25px;line-height: 41px;">&#xe60d;</i>
+						</label>
+						<div class="formControls col-xs-8">
+							<input id="" name="teaNum" type="text" placeholder="请输入用户名" class="input-text size-L">
+						</div>
 					</div>
-				</div>
-				<div class="row cl">
-					<label class="form-label col-xs-3">
-						<i class="Hui-iconfont">&#xe60e;</i>
-					</label>
-					<div class="formControls col-xs-8">
-						<input id="" name="password" type="password" placeholder="密码" class="input-text size-L">
+					<div class="row cl">
+						<label class="form-label col-xs-2" style="padding-right: 0;margin-left: 20px">
+							<i class="Hui-iconfont" style="font-size: 25px;line-height: 41px">&#xe60e;</i>
+						</label>
+						<div class="formControls col-xs-8">
+							<input id="" name="password" type="password" placeholder="请输入密码" class="input-text size-L">
+						</div>
 					</div>
-				</div>
-
-
-				<div class="row cl">
-					<div class="formControls col-xs-8 col-xs-offset-3">
-						<input name="" type="submit" class="btn btn-success radius size-L" value="&nbsp;登&nbsp;&nbsp;&nbsp;&nbsp;录&nbsp;">
-						<input name="" type="reset" class="btn btn-default radius size-L" value="&nbsp;取&nbsp;&nbsp;&nbsp;&nbsp;消&nbsp;">
+					<div class="row cl">
+						<div class="formControls col-xs-9 col-xs-offset-2">
+							<input name="" type="submit" class="btn btn-primary radius size-L" style="width: 145px" value="登录">
+							<input name="" type="reset" class="btn btn-default radius size-L" style="width: 145px" value="取消">
+						</div>
 					</div>
-				</div>
-			</form>
+				</form>
+			</div>
 		</div>
+		<footer>
+			<p>东北师范大学@信息科学与技术学院</p>
+		</footer>
 	</div>
+</div>
 
 	<script type="text/javascript" src="static/back/js/jquery.min.js"></script>
 	<script type="text/javascript" src="static/back/js/H-ui.js"></script>
